tests/typing/good/testfile-subtype-1.s
	.text
	.globl main
main:
	movq $97, %rdi
	movq %rdi, %rax
	ret
	.data
