tests/typing/bad/testfile-scope-1.s
	.text
	.globl main
main:
	movq x, %rax
	ret
	.data
